--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,17 @@ spring:
     username: root
     password: root123
     driver-class-name: com.mysql.jdbc.Driver
+##################redis配置文件##################
+  redis:
+    #redis数据库索引(默认为0),我们使用索引为3的数据库，说是为了避免和其他数据库发生冲突
+    database: 3
+    host: 192.168.8.116
+    port: 6379
+    password:
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  timeout: 0
+
+
 ###########Mybatis###################
 mybatis-plus:
   mapper-locations: classpath*:com/example/demo/pos/dao/mapping/*.xml
