--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>com.example</groupId>
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <!--<packaging>jar</packaging>-->
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
@@ -19,6 +20,7 @@
         <mybatis-plus.version>2.1.8</mybatis-plus.version>
     </properties>
 
+    <!--web项目的依赖-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
