--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,21 +8,21 @@ spring:
     url: jdbc:mysql://localhost:3306/mytest?serverTimezone=UTC&useSSL=false&autoReconnect=true&tinyInt1isBit=false&useUnicode=true&characterEncoding=utf8
     username: root
     password: root123
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #driver-class-name: com.mysql.jdbc.Driver
 ##################redis配置文件##################
-  redis:
-    #redis数据库索引(默认为0),我们使用索引为3的数据库，说是为了避免和其他数据库发生冲突
-    database: 3
-    host: 192.168.8.116
-    port: 6379
-    password:
-
-  timeout: 0
-
+#  redis:
+#    #redis数据库索引(默认为0),我们使用索引为3的数据库，说是为了避免和其他数据库发生冲突
+#    database: 3
+#    host: 192.168.8.116
+#    port: 6379
+#    password:
+#
+#  timeout: 0
 
 ###########Mybatis###################
 mybatis-plus:
-  mapper-locations: classpath*:com/example/demo/pos/dao/mapping/*.xml
+  mapper-locations: classpath*:com/example/demo/pos/dao/repository/*.xml
   type-aliases-package: com.example.demo.pos.dao.model
 
   global-config:
