--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,12 @@ spring:
     username: root
     password: root123
     driver-class-name: com.mysql.cj.jdbc.Driver
+
     #driver-class-name: com.mysql.jdbc.Driver
+  #false是关闭thymeleaf的缓存
+  thymeleaf:
+    cache: false
+
 ##################redis配置文件##################
 #  redis:
 #    #redis数据库索引(默认为0),我们使用索引为3的数据库，说是为了避免和其他数据库发生冲突
@@ -34,4 +39,5 @@ mybatis-plus:
     cache-enabled: true #配置的缓存的全局开关
     lazyLoadingEnabled: true #延时加载的开关
     multipleResultSetsEnabled: true #开启的话，延时加载一个属性时会加载该对象全部属性，否则按需加载属性
+
 
